# ftc-lol

./: .gitignore  Cargo.toml  Makefile  build.rs  client.env  make.py  make_release.py  server.env
src/: cli.rs  lib.rs  main.rs  patch_loader.rs  pkg.rs  repository.rs  segment.rs  segment_table.rs  wad.rs
src/patch/: _start.s  as.s  bootstrap.s  patch.c  system.h
src/patch_loader/: elf_util.rs  linux_loader.rs  load.rs  windows_loader.rs
src/pkg/: client.rs  server.rs
src/repository/: client.rs  entry_cache.rs  mod_fs.rs  server.rs  stream_util.rs
src/segment_table/: construct.rs  fantome.rs  raw.rs
