[package]
name = "code"
version = "0.1.0"
edition = "2021"

[lib]
name = "skins"
version = "0.1.0"
edition = "2021"

[dependencies]
winapi = { version="0.3.9", features=["winbase", "memoryapi", "processthreadsapi", "errhandlingapi", "tlhelp32"] }
goblin = { version="0.6.0" }
memmap2 = { version="0.5.10" }
