[package]
name = "code"
version = "0.1.0"
edition = "2021"

[lib]
name = "skins"
version = "0.1.0"
edition = "2021"

[dependencies]
winapi = { version="0.3.9", features=["winbase", "handleapi", "memoryapi", "psapi", "processthreadsapi", "errhandlingapi", "tlhelp32"] }
goblin = { version="0.6.0" }
memmap2 = { version="0.5.10" }
tokio = { version="1.26.0", features=["time", "net", "macros", "rt", "io-util", "sync", "fs", "rt-multi-thread", "io-std"] }
serde = { version="1.0.0", features=["derive"] }
serde_json = { version="1.0.0" }

sha2 = { version="0.10.0" }
reqwest = { version = "0.11.16", features=["multipart", "stream", "json"] }
axum = { version="0.6.15", features=["multipart"]}
tokio-util = { version="0.7.7", features=["io", "codec"] }
